[tool.poetry]
name = "hashstorm"
version = "0.1.0"
description = "Simples decoder para hashes"
authors = ["Guto Brutus <guto@devops.pro.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.scripts]
hashstorm = "hashstorm.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
